src/app/home/home.page.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

ion-content {
    --background: linear-gradient(to right, #fbe2c6, #fff9e1, #fbe2c6);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #333;
    text-align: center;
}

.home-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    height: 100%;
    min-height: 100vh;
    max-width: 800px;

    margin: 0 auto;
    padding: 1rem;
    box-sizing: border-box;
}

h1 {
    font-size: 2.5rem;
    margin-bottom: 1rem;
    font-weight: bold;
}

a {
    color: #333;
    text-decoration: underline;
}

.address {
    font-size: 1rem;
    margin-bottom: 2rem;
}

.subtitle {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.logo {
    width: 50%;
}

ion-icon {
    color: #333 !important;
    font-size: 1.4rem;
}

.socials .media {
    font-size: 3rem;
    margin: 0 1rem;
    color: #333;
}

